# Liu_Hongbo_5072_HWS

./: README.md
Final Project/: Final Project  Final.md  README_1.md
Final Project/comic_home_api/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
Final Project/comic_home_api/docs/: Makefile  conf.py  example.ipynb  make.bat
Final Project/comic_home_api/docs/_build/doctrees/: Comic_book_recommendation (1).doctree  Comic_book_recommendation.doctree  Light_novel_recommendation.doctree  changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree  search.doctree
Final Project/comic_home_api/docs/_build/doctrees/autoapi/: index.doctree
Final Project/comic_home_api/docs/_build/doctrees/autoapi/comic_home_api/: index.doctree
Final Project/comic_home_api/docs/_build/html/: .buildinfo  Comic_book_recommendation.html  Light_novel_recommendation.html  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Final Project/comic_home_api/docs/_build/html/_sources/: search.ipynb.txt
Final Project/comic_home_api/docs/_build/html/_sources/autoapi/: index.rst.txt
Final Project/comic_home_api/docs/_build/html/autoapi/: index.html
Final Project/comic_home_api/docs/_build/jupyter_execute/: Comic_book_recommendation.ipynb  Light_novel_recommendation.ipynb  example.ipynb
Final Project/comic_home_api/src/comic_home_api/: __init__.py  comic_home_api.py
Final Project/comic_home_api/tests/: test_comic_home_api.py
(+31 files in other folders)
