[tool.poetry]
name = "comic_home_api"
version = "0.1.0"
description = "An api package for Comic Home"
authors = ["Hongbo Liu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
